--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".layout">Layout</a></li>
             <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".refer">REFERENCE</a></li>
             <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".site">SITE</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".animation">ANIMATION</a></li>
           </ul>
         </div>
       </div>
@@ -464,6 +465,48 @@
                   <h5>Game</h5>
                   <p>게임 효과</p>
                   <span>JAVASCRIPT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape animation">
+            <a href="animation/svg.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SVG</span>
+                  <span class="overlay-text-thumb-donut">SVG</span>
+                  <span class="overlay-text-thumb1-donut">SVG</span>
+                  <span class="overlay-text-thumb2-donut">SVG</span>
+                </div>
+                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>SVG</h5>
+                  <p>SVG</p>
+                  <span>SVG</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape animation">
+            <a href="animation/css.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">CSS</span>
+                  <span class="overlay-text-thumb-donut">CSS</span>
+                  <span class="overlay-text-thumb1-donut">ANIMATION</span>
+                  <span class="overlay-text-thumb2-donut">CSS</span>
+                </div>
+                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>CSS</h5>
+                  <p>ANIMATION</p>
+                  <span>CSS</span>
                 </div>
               </div>
             </a>
