--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -49,11 +49,12 @@
             </div>
             <div class="header__menu">
                 <ul>
-                    <li><a href="#">헤더 영역</a></li>
-                    <li><a href="#">슬라이드 영역</a></li>
-                    <li><a href="#">배너 영역</a></li>
-                    <li><a href="#">컨텐츠 영역</a></li>
-                    <li><a href="#">푸터 영역</a></li>
+                    <li><a href="#headerType">헤더 영역</a></li>
+                    <li><a href="#sliderType">슬라이드 영역</a></li>
+                    <li><a href="#imageType01">배너 영역</a></li>
+                    <li><a href="#imgTextType">컨텐츠 영역</a></li>
+                    <li><a href="#cardType">카드 영역</a></li>
+                    <li><a href="#footerType">푸터 영역</a></li>
                 </ul>
             </div>
             <div class="header__member">
@@ -66,7 +67,7 @@
 
     <main id="mainType">
 
-        <section id="sliderType" class="slider__wrap">
+        <section id="sliderType" class="slider__wrap section">
             <h2 class="blind">슬라이드 영역</h2>
             <div class="slider__inner">
                 <div class="slider">
@@ -238,7 +239,7 @@
         </section> 
         <!-- //cardType -->
 
-        <section id="bannerType" class="banner__wrap nexon">
+        <section id="bannerType" class="banner__wrap nexon section">
             <h2 class="blind">배너 영역</h2>
             <div class="banner__inner">
                 <h3 class="title">오늘의 도시는 여기다!</h3>
@@ -251,7 +252,7 @@
         </section>
         <!-- //bannerType -->
 
-        <section class="nexon text__wrap section ">
+        <section class="nexon text__wrap section">
             <span>텍스트 유형01</span>
             <h2 class="mb70">스크립트를 익히는 방법</h2>
             <div class="text__inner container">
@@ -371,5 +372,32 @@
         </div>
     </footer>
     <!-- //footerType -->
+
+    <script>
+        window.addEventListener("scroll", () => {
+            let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop; //이렇게 3개 중첩해서 사용 가능
+
+            //forEach 문
+            document.querySelectorAll(".section").forEach((e,i)=>{
+                if(scrollTop >=  e.offsetTop){ //scrollTop이 id값 이상이면
+                    document.querySelectorAll(".header__menu ul li").forEach((li)=>{
+                        li.classList.remove("actived");
+                    })
+                    document.querySelector(".header__menu ul li:nth-child("+(i+1)+")").classList.add("actived");
+                }
+            })
+        })
+
+        //스크롤 이동
+        document.querySelectorAll(".header__menu ul li a").forEach(li => {
+            // console.log(li)
+            li.addEventListener("click", (e)=>{
+                e.preventDefault(); //클릭하면 이동하는걸 막아줌
+                document.querySelector(li.getAttribute("href")).scrollIntoView({
+                    behavior: "smooth"
+                });
+            })
+        })
+    </script>
 </body>
 </html>
