--- a/javascript/study/study_22.09/web_personal_site_custom.html
+++ b/javascript/study/study_22.09/web_personal_site_custom.html
@@ -66,15 +66,15 @@
                 <div class="document">
                     <!-- 01번 메인 샘플 시작 -->
                     <h2 class="t_tit">컨셉 디자인 사이트 구현해보기 : 디지털 컨셉</h2>
-                    <p class="t_desc">음 선생님이 저번주쯤인가 PHP로 블로그를 만들어보신다고<br>
-                        저한테 디자인 해보라고 말씀해주셔서 바로 그날 학원 끝나고 두개정도 만들어두었는데<br>
-                        뭔가 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ 조별작업도 그렇고 다른 배울것들도 많아서 왠지모르게 그대로 스윽 묻히게 될거같더라구요<br>
+                    <p class="t_desc">음... 선생님이 저번주쯤인가 PHP로 블로그를 만들어보신다고 하셨었는데 다들 기억나시나요?<br>
+                        그때 저한테 디자인 해보라고 말씀해주셔서 바로 그날 학원 끝나고 두개정도 만들어두었는데<br><br>
+                        무언가.... ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ 조별작업도 그렇고 다른 배울것들도 많아서 왠지모르게 그대로 스윽 묻히게 될거같더라구요<br>
                         그래서 차마 만들어둔건 못버리겠어서 제가 직접 구현해봤어요!
                     </p>
                     <hr>
                     <h2 class="t_tit2">피그마를 통해 레이아웃 잡아보기</h2>
                     <p class="t_desc2">처음 구상해볼때 뭔가 블로그라고 해서 꼭 블로그하면 떠오르는 레이아웃과 구성 그런것들을 할필요는 없을거같아 이 부분들에서 벗어나고 싶어서 좀 많이 엎어봤어요<br></p>
-                    <img src="" alt="">
+                    <img style="width: 100%;" src="https://github.com/kimsangjunv1/coding/blob/main/assets/img/screenshot_12.jpg?raw=true" alt="컨셉설명">
                     <div class="t_iframe" style="min-height : 750px; padding-top:0;">
                         <iframe src="https://kimsangjunv1.github.io/coding/javascript/effect/parallaxEffect03" frameborder="0"></iframe>
                     </div>
