--- a/site/site1/index copy.html
+++ b/site/site1/index copy.html
@@ -81,11 +81,11 @@
 
     <main id="mainType">
 
-        <section id="sliderType" class="slider__wrap baegopa">
+        <section id="sliderType" class="slider__wrap">
             <h2 class="blind">슬라이드 영역</h2>
             <div class="slider__inner">
                 <div class="slider">
-                    <div class="slider__img one show">
+                    <div class="slider__img">
                         <div class="desc">
                             <span>CITY</span>
                             <h3>SIGHTSEEING</h3>
@@ -134,7 +134,30 @@
         </section>
         <!-- //sliderType -->
 
-        <section id="imageType01" class="image__wrap nexon section baegopa">
+        <!-- <div class="container section">
+            <h2>강아지의 모든 모습!</h2>
+            <p>세상에서 가장 귀여운 강아지의 모든 모습을 상상하고 세세하게 지켜만 보세요!!</p>
+            <div class="card_container">
+                <div class="card">
+                    <div class="container"></div>
+                    <div class="text_cont">
+                        <h2>강아지의 모든 모습</h2>
+                        <p>강아지는 왜이렇게 귀여울까요 대체왜 그런건지 궁금하지만 제 생각에는 나야 모르곘지만 아무튼 그런것들이 막 있습니다 그렇게 생각하세요 ^_^</p>
+                        <div class="more">자세히 보기</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="container"></div>
+                    <div class="text_cont">
+                        <h2>강아지의 눈썹!</h2>
+                        <p>강아지는 눈썹이 있을까요? 없을까요? 어찌보면 있는거 같기도 하고 본적이 없었던거 같기도하고 생각 해본적이 없던거 같기도 하고 흠...</p>
+                        <div style="background-color:#BD4517" class="more">자세히 보기</div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+        <section id="imageType01" class="image__wrap nexon section">
             <h2>도시에서 키우는 반려견!</h2>
             <p>사람들이 북적이는 넓디 넓은 도시에서 어떤 동물을 한번 키워볼까요??</p>
             <div class="image__inner container">
@@ -156,7 +179,7 @@
         </section>
         <!-- //imageType -->
 
-        <section id="imgTextType" class="imgText__wrap nexon section gray baegopa">
+        <section id="imgTextType" class="imgText__wrap nexon section gray">
             <h2 class="blind">유용한 사이트 살펴보기 🎮</h2>
             <div class="imgText__inner container">
                 <div class="imgText__txt">
@@ -183,7 +206,7 @@
         </section>
         <!-- //imgTextType -->
 
-        <section id="cardType" class="card__wrap nexon section baegopa">
+        <section id="cardType" class="card__wrap nexon section">
             <!--다중 클래스 선택-->
             <h2>지루한 도시생활 속 게임은 어떠세요 🎮</h2>
             <p>새롭고 혁신적인 PS5™ 컨트롤러로 완전히 몰입할 수 있는 게임 경험을 즐겨보시기 바랍니다.</p>
@@ -252,7 +275,7 @@
         </section> 
         <!-- //cardType -->
 
-        <section id="bannerType" class="banner__wrap nexon section baegopa">
+        <section id="bannerType" class="banner__wrap nexon section">
             <h2 class="blind">배너 영역</h2>
             <div class="banner__inner">
                 <h3 class="title">오늘의 도시는 여기다!</h3>
@@ -265,7 +288,7 @@
         </section>
         <!-- //bannerType -->
 
-        <section id="textType" class="nexon text__wrap section baegopa">
+        <section id="textType" class="nexon text__wrap section">
             <span>텍스트 유형01</span>
             <h2 class="mb70">스크립트를 익히는 방법</h2>
             <div class="text__inner container">
@@ -307,7 +330,7 @@
     <!-- //mainType -->
 
     
-    <footer id="footerType" class="footer__wrap nexon section gray baegopa">
+    <footer id="footerType" class="footer__wrap nexon section gray">
         <h2 class="blind">푸터 영역</h2>
         <div class="footer__inner container">
             <div class="footer__menu">
@@ -391,8 +414,8 @@
             let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop; //이렇게 3개 중첩해서 사용 가능
 
             //forEach 문
-            document.querySelectorAll(".baegopa").forEach((e,i)=>{
-                if(scrollTop >= e.offsetTop-500){ //scrollTop이 id값 이상이면
+            document.querySelectorAll(".section").forEach((e,i)=>{
+                if(scrollTop >  e.offsetTop-2){ //scrollTop이 id값 이상이면
                     document.querySelectorAll(".header__menu ul li").forEach((li)=>{
                         li.classList.remove("actived");
                     })
@@ -424,21 +447,17 @@
         })
 
         //이미지 넘기기
-        let i = 1;
+        let i = 0;
         document.querySelector(".right").addEventListener("click", ()=>{
             i++
             if(i<=3){
                 document.querySelectorAll(".slider__img").forEach((e,i)=>{
                     e.classList.remove("show")
                 })
-                document.querySelectorAll(".dot").forEach((e,i)=>{
-                    e.classList.remove("active")
-                })
-                document.querySelector(".slider__img:nth-child("+i+")").classList.add("show");
-                document.querySelector(".dot:nth-child("+i+")").classList.add("active");
+                document.querySelector(".slider:nth-child("+i+")").classList.add("show")
             } else{
                 i = 0;
-                // document.querySelector(".slider__img:nth-child("+i+")").classList.add("show");
+                document.querySelector(".slider:nth-child("+i+")").classList.add("show")
             }
         })
     </script>
