--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -134,10 +134,10 @@
         </section>
         <!-- //sliderType -->
 
-        <section id="imageType01" class="image__wrap nexon section baegopa">
+        <section id="imageType01" class="image__wrap nexon section baegopa container">
             <h2>도시에서 키우는 반려견!</h2>
             <p>사람들이 북적이는 넓디 넓은 도시에서 어떤 동물을 한번 키워볼까요??</p>
-            <div class="image__inner container">
+            <div class="image__inner">
                 <article class="image img1">
                     <h3 class="image__title">불독은 어떠세요?</h3>
                     <p class="image__desc">
@@ -183,11 +183,11 @@
         </section>
         <!-- //imgTextType -->
 
-        <section id="cardType" class="card__wrap nexon section baegopa">
+        <section id="cardType" class="card__wrap nexon section baegopa container">
             <!--다중 클래스 선택-->
             <h2>지루한 도시생활 속 게임은 어떠세요 🎮</h2>
             <p>새롭고 혁신적인 PS5™ 컨트롤러로 완전히 몰입할 수 있는 게임 경험을 즐겨보시기 바랍니다.</p>
-            <div class="card__inner container">
+            <div class="card__inner">
                 <article class="card">
                     <figure class="card__header">
                         <!--img를 쓰기 위한 웹 표준 방법-->
@@ -265,10 +265,10 @@
         </section>
         <!-- //bannerType -->
 
-        <section id="textType" class="nexon text__wrap section baegopa">
+        <section id="textType" class="nexon text__wrap section baegopa container">
             <span>텍스트 유형01</span>
             <h2 class="mb70">스크립트를 익히는 방법</h2>
-            <div class="text__inner container">
+            <div class="text__inner">
                 <div class="text t1">
                     <h3 class="text__title">검색이펙트</h3>
                     <p class="text__desc">자바스크립트의 기본 메세더르르 통해 검색 스크립트를 완성하는 튜토리얼입니다 가끔은 이렇게 길게 적어볼때도 있습니다어어.</p>
@@ -309,7 +309,7 @@
     
     <footer id="footerType" class="footer__wrap nexon section gray baegopa">
         <h2 class="blind">푸터 영역</h2>
-        <div class="footer__inner container">
+        <div class="footer__inner">
             <div class="footer__menu">
                 <div>
                     <h3>사이트</h3>
